@@ -115,7 +115,7 @@ Vue.component('lms-information-dialog', {
             scanInfo: undefined,
             players: [],
             plugins: {names: new Set(), details: []},
-            updates: {names: new Set(), details: [], server:false},
+            updates: {names: new Set(), details: [], server:false, serverUrl: undefined},
             pluginStatus:'idle',
             rescans: [ ],
             scanning: false,
@@ -169,6 +169,7 @@ Vue.component('lms-information-dialog', {
                     this.updates.names.clear();
                     this.updates.details = [];
                     this.updates.server = updates && updates.server;
+                    this.updates.serverUrl = this.updates.server ? updates.server.url : undefined;
                     if (updates && updates.plugins && updates.plugins.length>0) {
                         for (var i=0, len=updates.plugins.length; i<len; ++i) {
                             if (updates.plugins[i]!=null) {
@@ -412,7 +413,7 @@ Vue.component('lms-information-dialog', {
             }
         },
         showUpdateInfo() {
-            bus.$emit('dlg.open', 'iframe', '/material/updateinfo.html', i18n('Update information'), undefined, IFRAME_HOME_CLOSES_DIALOGS);
+            bus.$emit('dlg.open', 'iframe', undefined==this.updates.serverUrl ? '/material/updateinfo.html' : this.updates.serverUrl, i18n('Update information'), undefined, IFRAME_HOME_CLOSES_DIALOGS);
         },
         showScanDetails() {
             openServerSettings(this.serverName, 0, '/material/settings/server/status.html');
